--- a/TwitchDBWebsite/appsettings.json
+++ b/TwitchDBWebsite/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TwitchDBContext": "Server=(localdb)\\mssqllocaldb;Database=TwitchDBContext-ded0fb9a-61ea-4245-ba14-9bdaeeee0ce3;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
